--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400&display=swap');
 
 *{
-  font-family: 'Bebas Neue', cursive;;
+  font-family: 'Roboto Slab', serif;
 }
 .nav-links{
   width: 20%;
